--- a/packages/d3-poc/package.json
+++ b/packages/d3-poc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@linkgraph/frontend",
+  "name": "d3-poc",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@common/components": "workspace:*",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
